--- a/style.css
+++ b/style.css
@@ -1,5 +1,39 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 
+
+:root {
+    --cursor-size: 28px;
+    --bg: #FAF7EE;
+}
+
+#cursor {
+    position: fixed;
+    top: calc(var(--cursor-size) * -0.5);
+    left: calc(var(--cursor-size) * -0.5);
+    pointer-events: none;
+    mix-blend-mode: difference;
+    filter: url(#goo);
+}
+
+.cursor-circle {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: var(--cursor-size);
+    height: var(--cursor-size);
+    border-radius: var(--cursor-size);
+    background: var(--bg);
+    transform-origin: center center;
+}
+
+body {
+    overflow: hidden;
+}
+
+.goo {
+    display: none;
+}
+
 body {
     margin: 0;
     padding: 0;
